{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 96,
  "lineage": "764bdd4d-bdd2-60e7-8e9e-3067ca62301f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnica",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkInterfaces/Team01NIC_Web",
            "ip_configuration": [
              {
                "name": "Team01NicConfigurationA",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/publicIPAddresses/Team01PublicIPA",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet/subnets/Team01SubnetA"
              }
            ],
            "location": "koreasouth",
            "mac_address": "00-22-48-06-83-9D",
            "name": "Team01NIC_Web",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/Team01NetworkSecurityGroupA",
            "private_ip_address": "1.0.1.4",
            "private_ip_addresses": [
              "1.0.1.4"
            ],
            "resource_group_name": "Team01ResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            },
            "virtual_machine_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Compute/virtualMachines/Team01WebVM"
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsga",
            "azurerm_public_ip.myterraformpublicipa",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubneta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "myterraformnicb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkInterfaces/Team01NIC_DB",
            "ip_configuration": [
              {
                "name": "Team01NicConfigurationB",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/publicIPAddresses/Team01PublicIPB",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet/subnets/Team01SubnetB"
              }
            ],
            "location": "koreasouth",
            "name": "Team01NIC_DB",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/Team01NetworkSecurityGroupB",
            "private_ip_address": "1.0.2.4",
            "private_ip_addresses": [
              "1.0.2.4"
            ],
            "resource_group_name": "Team01ResourceGroup",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_network_security_group.myterraformnsgb",
            "azurerm_public_ip.myterraformpublicipb",
            "azurerm_resource_group.myterraformgroup",
            "azurerm_subnet.myterraformsubnetb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsga",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/Team01NetworkSecurityGroupA",
            "location": "koreasouth",
            "name": "Team01NetworkSecurityGroupA",
            "resource_group_name": "Team01ResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "myterraformnsgb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkSecurityGroups/Team01NetworkSecurityGroupB",
            "location": "koreasouth",
            "name": "Team01NetworkSecurityGroupB",
            "resource_group_name": "Team01ResourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DB",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicipa",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/publicIPAddresses/Team01PublicIPA",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.156.176",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "Team01PublicIPA",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "Team01ResourceGroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "myterraformpublicipb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/publicIPAddresses/Team01PublicIPB",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "Team01PublicIPB",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "Team01ResourceGroup",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubneta",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet/subnets/Team01SubnetA",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/networkInterfaces/Team01NIC_Web/ipConfigurations/Team01NicConfigurationA"
            ],
            "name": "Team01SubnetA",
            "resource_group_name": "Team01ResourceGroup",
            "virtual_network_name": "Team01Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "myterraformsubnetb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.2.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet/subnets/Team01SubnetB",
            "name": "Team01SubnetB",
            "resource_group_name": "Team01ResourceGroup",
            "virtual_network_name": "Team01Vnet"
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup",
            "azurerm_virtual_network.myterraformnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "myterraformnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/16"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet",
            "location": "koreasouth",
            "name": "Team01Vnet",
            "resource_group_name": "Team01ResourceGroup",
            "subnet": [
              {
                "address_prefix": "1.0.1.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet/subnets/Team01SubnetA",
                "name": "Team01SubnetA"
              },
              {
                "address_prefix": "1.0.2.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/Team01ResourceGroup/providers/Microsoft.Network/virtualNetworks/Team01Vnet/subnets/Team01SubnetB",
                "name": "Team01SubnetB"
              }
            ],
            "tags": {
              "environment": "Terraform Demo"
            }
          },
          "depends_on": [
            "azurerm_resource_group.myterraformgroup"
          ]
        }
      ]
    }
  ]
}